hw_10_add_new_endpoints_to_swagger
