# src/utils/swagger.json
@@ -133,6 +133,148 @@
         }
       }
     },
+    "/users/{userId}/photo": {
+      "post": {
+        "tags": ["users"],
+        "description": "Add user photo",
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "User ID"
+          },
+          {
+            "name": "Authorization",
+            "in": "header",
+            "description": "Access token",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "photo",
+            "in": "formData",
+            "required": false,
+            "description": "User photo",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Add user photo"
+          },
+          "400": {
+            "description": "Bad request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      },
+      "delete": {
+        "tags": ["users"],
+        "description": "Remove user photo",
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "description": "User ID",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "Authorization",
+            "in": "header",
+            "description": "Access token",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Bad request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "204": {
+            "description": "Deletion successful"
+          }
+        }
+      }
+    },
+    "/users/{userId}/video": {
+      "post": {
+        "tags": ["users"],
+        "description": "Add user video",
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "User ID"
+          },
+          {
+            "name": "Authorization",
+            "in": "header",
+            "description": "Access token",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "video",
+            "in": "formData",
+            "required": false,
+            "description": "User video",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Add user video"
+          },
+          "400": {
+            "description": "Bad request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      },
+      "delete": {
+        "tags": ["users"],
+        "description": "Remove user video",
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "description": "User ID",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "Authorization",
+            "in": "header",
+            "description": "Access token",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Bad request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "204": {
+            "description": "Deletion successful"
+          }
+        }
+      }
+    },
 
     "/auth/register": {
       "post": {
